simplified the presentation